--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Richard Janis Goldschmidt <janis.beckert@gmail.com>"]
 [dependencies]
 blas = "0.15"
 ndarray = "0.9"
+ndarray-parallel = "0.3"
 
 [dev-dependencies]
 ndarray-rand = "0.5"
