--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,23 +4,24 @@ version = "0.3.1"
 authors = ["Richard Janis Goldschmidt <janis.beckert@gmail.com>"]
 
 [dependencies]
-ndarray = "0.10"
+ndarray = "0.11"
 
-[dependencies.blas]
-version = "0.16"
+[dependencies.cblas]
+version = "0.1.5"
 default-features = false
 
 [dependencies.ndarray-parallel]
-version = "0.5"
+version = "0.7"
 optional = true
 
 [dev-dependencies]
-ndarray-rand = "0.6"
-rand = "0.3"
+ndarray-rand = "0.7"
+rand = "0.4"
+
+[dev-dependencies.openblas-src]
+version = "0.5.6"
 
 [features]
 parallel = ["ndarray-parallel"]
 
-# A feature used for testing and benching.
-blas-openblas = ["blas/openblas"]
-test = ["blas-openblas", "parallel"]
+test = ["parallel"]
