--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
-name = "gram-schmidt"
-version = "0.3.1"
+name = "gramschmidt"
+version = "0.4.0"
 authors = ["Richard Janis Goldschmidt <janis.beckert@gmail.com>"]
+license = "MIT"
+description = "Classical, Modified, Reorthogonalized Gram Schmidt Orthogonalization and QR decompostion"
+keywords = ["gramschmidt", "qr", "cgs", "mgs", "cgs2"]
+categories = ["science", "algorithms"]
+repository = "https://github.com/SuperFluffy/gramschmidt-rs"
+readme = "README.md"
 
 [dependencies]
 ndarray = "0.11"
@@ -10,10 +16,6 @@ ndarray = "0.11"
 version = "0.1.5"
 default-features = false
 
-# [dependencies.ndarray-parallel]
-# version = "0.7"
-# optional = true
-
 [dev-dependencies]
 lazy_static = "1.0"
 ndarray-rand = "0.7"
@@ -21,8 +23,3 @@ rand = "0.4"
 
 [dev-dependencies.openblas-src]
 version = "0.5.6"
-
-# [features]
-# parallel = ["ndarray-parallel"]
-
-# test = ["parallel"]
