--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,9 @@ ndarray = "0.11"
 version = "0.1.5"
 default-features = false
 
-[dependencies.ndarray-parallel]
-version = "0.7"
-optional = true
+# [dependencies.ndarray-parallel]
+# version = "0.7"
+# optional = true
 
 [dev-dependencies]
 lazy_static = "1.0"
@@ -22,7 +22,7 @@ rand = "0.4"
 [dev-dependencies.openblas-src]
 version = "0.5.6"
 
-[features]
-parallel = ["ndarray-parallel"]
+# [features]
+# parallel = ["ndarray-parallel"]
 
-test = ["parallel"]
+# test = ["parallel"]
