--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "gramschmidt"
 version = "0.4.1"
+edition = "2018"
 authors = ["Richard Janis Goldschmidt <janis.beckert@gmail.com>"]
 license = "MIT"
 description = "Classical, Modified, Reorthogonalized Gram Schmidt Orthogonalization and QR decompostion"
@@ -10,16 +11,14 @@ repository = "https://github.com/SuperFluffy/gramschmidt-rs"
 readme = "README.md"
 
 [dependencies]
-ndarray = "0.11"
+ndarray = "0.12.1"
 
 [dependencies.cblas]
-version = "0.1.5"
+version = "0.2.0"
 default-features = false
 
 [dev-dependencies]
-lazy_static = "1.0"
-ndarray-rand = "0.7"
-rand = "0.4"
-
-[dev-dependencies.openblas-src]
-version = "0.5.6"
+lazy_static = "1.2.0"
+ndarray-rand = "0.9.0"
+rand = "0.6.5"
+openblas-src = "0.7.0"
