--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,11 @@ repository = "https://github.com/SuperFluffy/gramschmidt-rs"
 readme = "README.md"
 
 [dependencies]
+cblas = "0.2.0"
 ndarray = "0.12.1"
 
-[dependencies.cblas]
-version = "0.2.0"
-default-features = false
-
 [dev-dependencies]
-lazy_static = "1.2.0"
+lazy_static = "1.3.0"
 ndarray-rand = "0.9.0"
-rand = "0.6.5"
 openblas-src = "0.7.0"
+rand = "0.6.5"
