--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ ndarray = "0.12.1"
 
 [dev-dependencies]
 lazy_static = "1.3.0"
+lapacke = "0.2.0"
 ndarray-rand = "0.9.0"
 openblas-src = "0.7.0"
 rand = "0.6.5"
